# backend-in-a-box

./: .env.example  .gitignore  AUTH.md  CONTRACT.md  GETTING_STARTED.md  HOOKS.md  MIGRATIONS.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  manage.py  migrate.py  pyproject.toml  run_dev.py
app/: main.py
app/api/: __init__.py  post.py  user.py
app/auth/: __init__.py  dependencies.py  router.py  schemas.py
app/core/: config.py  database.py  hooks.py  security.py
app/models/: __init__.py  post.py  user.py
app/schema/: user.yaml
app/services/: README_hooks.py  __init__.py  celery_app.py  tasks.py
docker/: Dockerfile  docker-entrypoint.sh
generator/: __init__.py  __main__.py  api_gen.py  model_gen.py  parser.py  validator.py
migrations/: env.py
migrations/versions/: 20251231_2252_f407310e66a8_add_post_model.py
